# ble-client

./: CMakeLists.txt  README.md
cmake/: common-options.cmake  git-utils.cmake
src/: CMakeLists.txt  bluetooth_controller.cpp  bluetooth_controller.h  characteristics_model.cpp  characteristics_model.h  descriptors_model.cpp  descriptors_model.h  devices_model.cpp  devices_model.h  globals.cpp  globals.h  log_entry.cpp  log_entry.h  log_entry_p.h  logger.cpp  logger.h  logger_model.cpp  logger_model.h  main.cpp  qml_types.h  res.qrc  services_model.cpp  services_model.h  settings.cpp  settings.h  version.h.in
src/qml/: AboutPage.qml  AboutPageForm.qml  CharacteristicDelegate.qml  CharacteristicDelegateForm.qml  CharacteristicDetailsPopup.qml  DescriptorDelegate.qml  DescriptorDelegateForm.qml  DescriptorDetailsPopup.qml  DescriptorDetailsPopupForm.qml  DeviceDelegate.qml  DeviceDelegateForm.qml  DevicePage.qml  DevicePageForm.qml  DevicesPage.qml  DevicesPageForm.qml  ErrorPopup.qml  ErrorPopupForm.qml  LogEntryDelegate.qml  LogEntryDelegateForm.qml  LogPage.qml  LogPageForm.qml  MainWindow.qml  MainWindowForm.qml  NavigationPane.qml  NavigationPaneForm.qml  ServiceDelegate.qml  ServiceDelegateForm.qml  SettingsPage.qml  SettingsPageForm.qml
